--- a/src/styles/NoteItem.module.css
+++ b/src/styles/NoteItem.module.css
@@ -46,6 +46,8 @@
 .Text {
     font-size: 70%;
     text-align: left;
+    text-align: left;
+    contain: content;
 }
 
 @media  screen and (max-width: 413px) {
